[package]
name = "trade-lang-runtime-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
trade-meta-compiler = { path = "../trade-meta-compiler" }
trade-lang-core = { path = "../trade-lang-core" }
log = "0.4"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
